--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
     "eslint-plugin-prettier": "^5.5.3",
     "prettier": "^3.6.2",
     "typescript-eslint": "^8.37.0"
-  }
+  },
+  "packageManager": "pnpm@10.8.1"
 }
